# cpp-dev-tools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-and-run-win.bat  build-mac-release.sh  build-win-release.bat  build-win.bat  tasks.json
include/: cdt.h
lib/: tiny-process-library.patch
lib/cameron314-concurrentqueue/: CMakeLists.txt
lib/skypjack_entt/: CMakeLists.txt
mac/: Info.plist  cpp-dev-tools.icns
qml/: AlertDialog.qml  BigTextArea.qml  BlankView.qml  Button.qml  ButtonWidget.qml  CheckBox.qml  ChooseFile.qml  ChooseFileView.qml  ChooseTask.qml  ChooseTaskView.qml  Common.js  Component.qml  ContextMenuItemWidget.qml  ContextMenuWidget.qml  CrossPlatformMenuBar.qml  CrossPlatformMenuBarWidget.qml  DialogMac.qml  DialogWidget.qml  Documentation.qml  DynamicContextMenu.qml  ExecTasksView.qml  ExecView.qml  FileLinkLookup.qml  FindInFiles.qml  FolderList.qml  GitBranchList.qml  GitCommit.qml  GitDiff.qml  GitFileDiff.qml  GitLog.qml  GitShow.qml  GtestExecution.qml  Icon.qml  IconButton.qml  IconButtonWidget.qml  IconWidget.qml  InputAndListView.qml  KeyboardShortcuts.qml  ListSearch.qml  ListSearchWidget.qml  (+53 more)
src/: AlertDialog.cpp  AlertDialog.hpp  AppData.cpp  AppData.hpp  Application.cpp  Application.hpp  Base.hpp  ChooseFile.cpp  ChooseFile.hpp  ChooseFileController.cpp  ChooseFileController.hpp  ChooseTask.cpp  ChooseTask.hpp  ChooseTaskController.cpp  ChooseTaskController.hpp  CloseProject.cpp  CloseProject.hpp  Common.cpp  Common.hpp  Database.cpp  Database.hpp  Db.cpp  Db.hpp  Dialog.cpp  Dialog.hpp  DisplayExec.cpp  DisplayExec.hpp  DisplayTaskList.cpp  DisplayTaskList.hpp  ExecOSCmd.cpp  ExecOSCmd.hpp  ExecTask.cpp  ExecTask.hpp  ExecTasks.cpp  ExecTasks.hpp  ExecUserCmds.cpp  ExecUserCmds.hpp  ExecuteUserCommands.cpp  ExecuteUserCommands.hpp  Execution.cpp  (+221 more)
src/process/: config.cpp  config.hpp  process.cpp  process.hpp
test/: AnotherExampleTest.hpp  ExampleTest.cpp  ExampleTest.hpp  d-test.cpp  example_test.h  exec-test.cpp  g-test.cpp  gd-test.cpp  gf-test.cpp  gs-test.cpp  gt-test.cpp  gtest-example.cc  gtr-test.cpp  launch-test.cpp  main.cc  main.cpp  misc-test.cpp  o-test.cpp  s-test.cpp  t-gtest-test.cpp  t-test.cpp  test-lib.cpp  test-lib.h  test-tasks.json  test.cpp  tr-test.cpp
test/data/: CdtTest.FailToStartDueToCdtTasksNotBeingArrayOfObjects0.txt  CdtTest.FailToStartDueToTasksConfigHavingErrors0.txt  CdtTest.FailToStartDueToTasksConfigNotBeingJson0.txt  CdtTest.FailToStartDueToTasksConfigNotExisting0.txt  CdtTest.FailToStartDueToUserConfigHavingPropertiesInIncorrectFormat0.txt  CdtTest.FailToStartDueToUserConfigNotBeingJson0.txt  CdtTest.StartAndDisplayHelp0.txt  CdtTest.StartAndExecuteGtestTaskThatExitsWith0ExitCodeInTheMiddle1.txt  CdtTest.StartAndExecuteGtestTaskWithGtestFilter0.txt  CdtTest.StartAndExecuteGtestTaskWithNoTests0.txt  CdtTest.StartAndExecuteGtestTaskWithNonGtestBinary0.txt  CdtTest.StartAndExecuteRestartTask1.txt  CdtTest.StartAndExecuteTaskWithGtestPreTaskWithMultipleSuites0.txt  CdtTest.StartAndFailPrimaryTask1.txt  CdtTest.StartAndFailToDebugGtestTask0.txt  CdtTest.StartAndFailToDebugTask1.txt  CdtTest.StartAndFailToExecuteRestartTask1.txt  CdtTest.StartAttemptToDebugTaskWhileMandatoryPropertiesAreNotSpecifiedInUserConfig1.txt  CdtTest.StartAttemptToExecuteGtestTaskWithNonExistentBinaryAndFail0.txt  CdtTest.StartAttemptToExecuteTaskWithGtestPreTaskThatExitsWith0ExitCodeInTheMiddleAndFail0.txt  CdtTest.StartAttemptToOpenNonExistentLinkAndViewTaskOutput0.txt  CdtTest.StartAttemptToRerunGtestWithDebuggerWhenNoTestsHaveBeenExecutedYet0.txt  CdtTest.StartDebugGtestPrimaryTaskWithPreTasks0.txt  CdtTest.StartDebugPrimaryTaskWithPreTasks1.txt  CdtTest.StartExecuteGtestTaskFailOneOfTheTestsAndViewAutomaticallyDisplayedTestOutput0.txt  CdtTest.StartExecuteGtestTaskRerunOneOfItsTestsAndDisplayListOfOriginallyExecutedTests2.txt  CdtTest.StartExecuteGtestTaskWithFailedTestsAndLongTestAndAbortIt0.txt  CdtTest.StartExecuteGtestTaskWithLongTestAndAbortIt0.txt  CdtTest.StartExecuteGtestTaskWithNonGtestBinaryThatDoesNotFinishAndAbortItManually1.txt  CdtTest.StartExecuteGtestTaskWithPreTasksFailAndRerunFailedTest2.txt  CdtTest.StartExecuteGtestTaskWithPreTasksFailAndSearchOutputOfTheTest1.txt  CdtTest.StartExecuteGtestTaskWithPreTasksFailAndSearchOutputOfTheTest2.txt  CdtTest.StartExecuteGtestTaskWithPreTasksFailAttemptToRerunTestThatDoesNotExistWithDebuggerAndViewListOfFailedTests0.txt  CdtTest.StartExecuteGtestTaskWithPreTasksSucceedAndRerunOneOfTest1.txt  CdtTest.StartExecuteGtestTaskWithPreTasksSucceedAndRerunOneOfTest2.txt  CdtTest.StartExecuteGtestTaskWithPreTasksSucceedAndRerunOneOfTestsWithDebugger0.txt  CdtTest.StartExecuteGtestTaskWithPreTasksSucceedAndRerunOneOfTestsWithDebugger1.txt  CdtTest.StartExecuteGtestTaskWithPreTasksSucceedAndRerunOneOfTestsWithDebugger3.txt  CdtTest.StartExecuteLongGtestTaskWithPreTasksAbortItRepeatedlyRerunFailedTestAndAbortItAgain1.txt  CdtTest.StartExecuteTaskAndFailToOpenLinksFromOutput1.txt  (+65 more)
test/test-configs/: cdt_tasks-not-array.json  config-with-errors.json  test-tasks.json
test/test-gtests/: test-gtests.cpp
test/test-homes/incorrect-open-in-editor-command/: .cpp-dev-tools.json
test/test-homes/test-config/: .cpp-dev-tools.json
win/: cpp-dev-tools.rc
